--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "homemade_express_typescript",
+  "name": "slapgame_backend",
   "version": "1.0.0",
   "description": "",
   "private": true,
@@ -18,7 +18,8 @@
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "helmet": "^6.0.1"
+    "helmet": "^6.0.1",
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
