--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.4",
+    "@types/pg": "^8.6.6",
     "jest": "^29.4.3",
     "nodemon": "^2.0.20",
     "supertest": "^6.3.3",
