--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^6.15.0",
     "helmet": "^6.0.1",
     "pg": "^8.10.0",
     "socket.io": "^4.6.1"
