--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
     "helmet": "^6.0.1",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.10.0",
     "socket.io": "^4.6.1"
   },
@@ -29,6 +30,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.14.4",
     "@types/pg": "^8.6.6",
     "jest": "^29.4.3",
