--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.10.0",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -33,6 +34,7 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.14.4",
     "@types/pg": "^8.6.6",
+    "@types/uuid": "^9.0.1",
     "jest": "^29.4.3",
     "nodemon": "^2.0.20",
     "supertest": "^6.3.3",
