--- a/.gitignore
+++ b/.gitignore
@@ -57,8 +57,8 @@ typings/
 # dotenv environment variables file
 .env
 
-# next.js build output
-.next
+# build output
+dist
 
 # vscode folder
-.vscode/
+.vscode
